Adding Event Page

--- a/Views/Destination/Add.cshtml
+++ b/Views/Destination/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@model Horizons.Models.AddDestinationViewModel
+﻿@using Men_Of_Varna.Models.Destinations
+@model AddDestinationViewModel
  @{
     ViewData["Title"] = "Add Destination";
     var today = DateTime.Now.ToString("dd-MM-yyyy");
