--- a/Views/Destination/Delete.cshtml
+++ b/Views/Destination/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model  Horizons.Models.DeleteDestinationViewModel;
+﻿@using Men_Of_Varna.Models.Destinations
+@model  DeleteDestinationViewModel;
 
 @{
     ViewData["Title"] = "Delete Destination";
