--- a/Views/Destination/Edit.cshtml
+++ b/Views/Destination/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Horizons.Models.EditDestinationViewModel
+﻿@using Men_Of_Varna.Models.Destinations
+@model EditDestinationViewModel
 
 @{
     ViewData["Title"] = "Edit Destination";
