--- a/Views/Destination/Favorites.cshtml
+++ b/Views/Destination/Favorites.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Horizons.Models.FavoriteDestinationViewModel>
+﻿@using Men_Of_Varna.Models.Destinations
+@model IEnumerable<FavoriteDestinationViewModel>
 @{
     ViewData["Title"] = "Favorite Destinations";
 }
