--- a/Views/Destination/Details.cshtml
+++ b/Views/Destination/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@* 
+﻿@using Men_Of_Varna.Models.Destinations
+@* 
     IsPublisher: A boolean property that indicates whether the currently logged-in user is the creator (publisher) of the destination. 
     If true, the user cannot add the destination to their favorites, the "Favorites" button will not be displayed.
 
