--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Horizons
-@using Horizons.Models
+﻿@using Men_Of_Varna
+@using Men_Of_Varna.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
