--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -6,6 +6,21 @@
     text-align: center;
 }
 
+.card-text {
+    font-size: 1.1rem;
+}
+
+.custom-blue-btn {
+    background-color: #007bff; /* Change to your desired blue */
+    color: white; /* Ensure the text is white */
+}
+
+.custom-blue-btn:hover {
+    background-color: #0056b3; /* Change to your desired blue */
+    color: white; /* Ensure the text is white */
+}
+
+
 .welcome-section h1 {
     font-size: 2.5rem;
     margin-bottom: 15px;
@@ -70,6 +85,10 @@
     color: #ccc; /* Soft grey text for footer quote */
 }
 
+.card-text p {
+    font-size: 1.5rem;
+}
+
 @media (max-height: 800px) {
     .welcome-section {
         padding: 15px;
@@ -130,17 +149,17 @@
 }
 
 .form-control {
-    background-color: #333; /* Dark input fields */
+    background-color: transparent; /* Dark input fields */
     border: 1px solid #444; /* Slightly lighter border */
     border-radius: 5px;
     padding: 10px;
-    color: #fff; /* White text in inputs */
+    color: #000; /* White text in inputs */
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
 .form-label-add-edit {
-    font-weight: bold;
-    color: #ddd; /* Light grey text for labels */
+    font-weight: bolder;
+    color: #000; /* Light grey text for labels */
 }
 
 input:focus, textarea:focus, select:focus {
