--- a/Views/Event/Delete.cshtml
+++ b/Views/Event/Delete.cshtml
@@ -1,8 +1,8 @@
-﻿@using Men_Of_Varna.Models.Destinations
-@model  DeleteDestinationViewModel;
+﻿@using Men_Of_Varna.Models.Events
+@model DeleteEventViewModel;
 
 @{
-    ViewData["Title"] = "Delete Destination";
+    ViewData["Title"] = "Delete Event";
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
@@ -15,21 +15,21 @@
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center">@Model.Name</h3>
-                <p class="mb-0"><strong>Published By:</strong> @Model.Publisher</p>
+                <p class="mb-0"><strong>Published By:</strong> @Model.CreatedBy</p>
                 <p class="text-danger mt-3">
                     Are you sure you want to delete <strong>@Model.Name</strong>?
                 </p>
             </div>
             <div class="card-footer d-flex justify-content-between">
-                <form asp-action="Delete" method="post">
+                <form asp-controller="Event" asp-action="Delete" method="post">
                     <input type="hidden" asp-for="Id" />
                     <input type="hidden" asp-for="Name" />
-                    <input type="hidden" asp-for="PublisherId" />
+
                     <button type="submit" class="btn btn-danger">
                         <i class="fas fa-trash"></i> Confirm Delete
                     </button>
                 </form>
-                <a asp-controller="Destination" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-warning">
+                <a asp-controller="Event" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-warning">
                     <i class="fas fa-times-circle"></i> Cancel
                 </a>
             </div>
