--- a/Views/Event/Edit.cshtml
+++ b/Views/Event/Edit.cshtml
@@ -1,8 +1,8 @@
-﻿@using Men_Of_Varna.Models.Destinations
-@model EditDestinationViewModel
+﻿@using Men_Of_Varna.Models.Events
+@model EditEventViewModel
 
 @{
-    ViewData["Title"] = "Edit Destination";
+    ViewData["Title"] = "Edit Event";
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
@@ -34,20 +34,12 @@
             </div>
 
             <div class="mb-2">
-                <label asp-for="@Model.ImageUrl" class="form-label-add-edit">Image URL</label>
-                <input asp-for="@Model.ImageUrl" class="form-control" placeholder="Enter image URL (optional)" />
-                <span asp-validation-for="@Model.ImageUrl" class="text-danger"></span>
+                <label asp-for="@Model.PictureUrl" class="form-label-add-edit">Image URL</label>
+                <input asp-for="@Model.PictureUrl" class="form-control" placeholder="Enter image URL (optional)" />
+                <span asp-validation-for="@Model.PictureUrl" class="text-danger"></span>
             </div>
 
-            <div class="col-sm-6 mb-2">
-                <label asp-for="@Model.TerrainId" class="form-label-add-edit">Select Terrain</label>
-                <select asp-for="@Model.TerrainId" class="form-control" asp-items="@(new SelectList(Model.Terrains, "Id", "Name"))">
-                    <option value="">Select Terrain...</option>
-                </select>
-                <span asp-validation-for="@Model.TerrainId" class="text-danger"></span>
-            </div>
-
-            <input type="hidden" asp-for="@Model.PublisherId" />
+            <input type="hidden" asp-for="@Model.CreatedBy" />
             <input type="hidden" asp-for="@Model.Id" />
 
             <div class="mb-2">
