Expanded Controllers and View models + Seeded Every Table in the Database

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,6 +46,18 @@
                                     <span class="visually-hidden">(current)</span>
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Feedback" asp-action="Index">
+                                    <i class="fas fa-envelope"></i> Feedback
+                                    <span class="visually-hidden">(current)</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" asp-controller="Store" asp-action="Index">
+                                    <i class="fa-solid fa-store"></i> Store
+                                    <span class="visually-hidden">(current)</span>
+                                </a>
+                            </li>
                             }
                             else
                             {
