--- a/Views/Event/Add.cshtml
+++ b/Views/Event/Add.cshtml
@@ -22,10 +22,10 @@
                 </div>
 
                 <div class="col-sm-6 mb-2">
-                    <label asp-for="@Model.PublishedOn" class="form-label-add-edit">Published On</label>
-                    <input asp-for="PublishedOn" class="form-control" type="date" aria-required="true" value="@(Model.PublishedOn == DateTime.MinValue ? DateTime.Now.ToString("yyyy-MM-dd") : Model.PublishedOn.ToString("yyyy-MM-dd"))" />
-
-                    <span asp-validation-for="@Model.PublishedOn" class="text-danger"></span>
+                    <label asp-for="PublishedOn" class="form-label-add-edit">Published On</label>
+                    <input asp-for="PublishedOn" class="form-control" type="date" aria-required="true"
+                           value="@(Model.PublishedOn == DateTime.MinValue ? DateTime.Now.ToString("yyyy-MM-dd") : Model.PublishedOn.ToString("yyyy-MM-dd"))" />
+                    <span asp-validation-for="PublishedOn" class="text-danger"></span>
                 </div>
             </div>
 
