--- a/Views/Event/Details.cshtml
+++ b/Views/Event/Details.cshtml
@@ -39,6 +39,16 @@
                 <a asp-controller="Event" asp-action="Index" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1">
                     <i class="fas fa-arrow-left"></i> Back
                 </a>
+                @if (User?.Identity?.IsAuthenticated == true && User.Identity.Name == "admin@menofvarna.com")
+    {
+                    <a asp-controller="Event" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1">
+                        <i class="fas fa-edit"></i> Edit
+                    </a>
+
+                    <a asp-controller="Event" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger d-flex justify-content-center align-items-center flex-fill mx-1">
+                        <i class="fa-solid fa-minus"></i> Delete
+                    </a>
+    }
                 @if (User?.Identity?.IsAuthenticated == true && !Model.IsAttending && Model.IsUpcoming)
                 {
                     <form asp-controller="Event" asp-action="Attend" method="post" class="d-flex justify-content-center align-items-center flex-fill mx-1">
