--- a/Views/Event/MyEvents.cshtml
+++ b/Views/Event/MyEvents.cshtml
@@ -44,6 +44,12 @@ else
                     </button>
                 </form>
             </div>
+            <div class="col-md-2 text-end">
+                <!-- Details Button -->
+                <a asp-controller="Event" asp-action="Details" asp-route-id="@eventItem.Id" class="btn btn-info">
+                    <i class="fas fa-info-circle"></i> Details
+                </a>
+            </div>
         </div>
     }
 }
