Fixed bugs in Feedback page - Retouch the entity model - Added My Cart Page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -84,6 +84,13 @@
                         }
                         
                     </ul>
+                    @if (User?.Identity?.IsAuthenticated ?? false)
+                    {
+                       
+                        <a class="nav-link" asp-controller="Order" asp-action="Index">
+                            <i class="fas fa-shopping-cart"></i> My Cart
+                        </a>
+                    }
                     <partial name="_LoginPartial" />
                 </div>
             </div>
