--- a/Views/Store/Details.cshtml
+++ b/Views/Store/Details.cshtml
@@ -48,12 +48,11 @@
                         <i class="fa-solid fa-minus"></i> Delete
                     </a>
                 }
-                else
-                {
-                    <a asp-controller="Store" asp-action="Buy" asp-route-id="@Model.Id" class="btn btn-success d-flex justify-content-center align-items-center flex-fill mx-1">
+
+                <a asp-controller="Order" asp-action="AddToCart" asp-route-id="@Model.Id" class="btn btn-success d-flex justify-content-center align-items-center flex-fill mx-1">
                         <i class="fas fa-shopping-cart"></i> Buy
                     </a>
-                }
+                
             </div>
         </div>
     </div>
