--- a/Views/Store/Index.cshtml
+++ b/Views/Store/Index.cshtml
@@ -52,7 +52,7 @@
                         <a asp-controller="Store" asp-action="Details" asp-route-id="@product.Id" class="btn btn-info me-2 w-100">
                             <i class="fas fa-info-circle"></i> Details
                         </a>
-                        <a asp-controller="Store" asp-action="Details" asp-route-id="@product.Id" class="btn btn-warning w-100">
+                        <a asp-controller="Order" asp-action="AddToCart" asp-route-id="@product.Id" class="btn btn-warning w-100">
                             <i class="fa-solid fa-cart-arrow-down"></i> Buy
                         </a>
                     </div>
