--- a/Areas/Admin/Views/Home/Index.cshtml
+++ b/Areas/Admin/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <div class="col-md-4">
             <div class="card shadow h-100 border-0">
                 <div class="card-body d-flex flex-column align-items-center text-center">
-                    <i class="fas fa-film fa-3x text-secondary mb-3"></i>
+                    <i class="fa-regular fa-clipboard fa-3x text-secondary mb-3"></i>
                     <h5 class="card-title">Manage Orders</h5>
                     <p class="card-text text-muted">Change status of orders, check all orders made by the users.</p>
                     <a asp-area="Admin" asp-controller="OrderManagement" asp-action="Index" class="btn btn-secondary mt-auto w-100">
