--- a/Views/Store/Details.cshtml
+++ b/Views/Store/Details.cshtml
@@ -38,7 +38,7 @@
                 <a asp-controller="Store" asp-action="Index" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1">
                     <i class="fas fa-arrow-left"></i> Back
                 </a>
-                @if (User?.Identity?.IsAuthenticated == true && User.Identity.Name == "admin@menofvarna.com")
+                @if (User?.IsInRole("Admin") ?? false)
                 {
                     <a asp-controller="Store" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1">
                         <i class="fas fa-edit"></i> Edit
