--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -278,3 +278,55 @@ header {
 footer.bg-dark {
     background-color: #000 !important; /* Ensures the background is black */
 }
+
+
+/* Pagination Styling */
+.pagination {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+    .pagination .page-item {
+        margin: 0 5px;
+    }
+
+    .pagination .page-link {
+        color: #007bff;
+        background-color: #f8f9fa;
+        border: none;
+        padding: 10px 16px;
+        font-size: 1rem;
+        border-radius: 50%;
+        transition: all 0.3s ease-in-out;
+        text-align: center;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+        .pagination .page-link:hover {
+            background-color: #007bff;
+            color: #fff;
+            border-color: #007bff;
+        }
+
+    .pagination .page-item.active .page-link {
+        background-color: #007bff;
+        color: #fff;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    .pagination .page-item.disabled .page-link {
+        color: #6c757d;
+        pointer-events: none;
+        background-color: #f8f9fa;
+    }
+
+    .pagination .page-link i {
+        font-size: 1.2rem;
+    }
+
